# masterarbeit

./: README.md  requirements.txt  test.py
chatbot/: .env.example  .gitignore  README.md  embedd.py  main.py  module_instances.py  pyproject.toml  requirements.txt
chatbot-frontend/: .gitignore  nuxt.config.ts  package-lock.json  package.json
chatbot-frontend/stores/: messageStore.ts
chatbot/csv/: faq.csv  fraktionen.csv
chatbot/docker/: docker-compose.yml
chatbot/evaluation/: 3lg_4.1_4.1.csv  3lg_4.1_4o.csv  3sm_4.1_4.1.csv  3sm_4.1_4o.csv  4.1-mini-classify.csv  4.1-nano-classify.csv  evaluate.py  results.xlsm  results.xlsx
chatbot/evaluation/files/: input.csv
chatbot/modules/: anonymizer_manager.py  database_manager.py  model_manager.py  rag_manager.py
chatbot/modules/input_managers/: base_input_manager.py  faq_input_manager.py  fraction_input_manager.py
chatbot/modules/nodes/: anonymize.py  classify.py  contact_customer_support.py  dont_know.py  form_query.py  generate.py  retrieve.py
chatbot/modules/pipelines/: base_csv_pipeline.py
chatbot/modules/rag/: prompts.py  state.py  utils.py
chatbot/notebooks/: graph_image.ipynb
chatbot/utils/: logging_config.py
sbert-embedding/: RagManager.py  embedd.py  main.py  module_instances.py  modules.py  query_api.py
sbert-embedding/classes/: DatabaseManager.py  InputManager.py  ModelManager.py  Sentence.py
sbert-embedding/csv/: fraktionen.csv
sbert-embedding/docker/: docker-compose.yml
sbert-embedding/modules/: DatabaseManager.py  InputManager.py  RagManager.py  rag_manager.py
(+25 files in other folders)
