[project]
name = "chatbot"
version = "0.1.0"
description = ""
authors = [
    {name = "Max Handke",email = "handkemax@gmail.com"}
]
readme = "README.md"
requires-python = "=3.13.3"
dependencies = [
    "fastapi (==0.118.0)",
    "langchain (==0.3.27)",
    "langchain-community (==0.3.30)",
    "langchain-core (==0.3.77)",
    "langchain-experimental (==0.3.4)",
    "langchain-huggingface (==0.3.1)",
    "langchain-milvus (==0.2.1)",
    "langchain-openai (==0.3.34)",
    "langgraph (==0.6.8)",
    "openai (==2.1.0)",
    "presidio-anonymizer (==2.2.360)",
    "progressbar33 (==2.4)",
    "psycopg-pool (==3.2.6)",
    "pydantic (==2.11.9)",
    "python-dotenv (==1.1.1)",
    "uvicorn (==0.37.0)",
    "spacy (==3.8.7)",
    "presidio-analyzer (==2.2.360)",
    "de-core-news-lg @ https://github.com/explosion/spacy-models/releases/download/de_core_news_lg-3.8.0/de_core_news_lg-3.8.0-py3-none-any.whl",
    "psycopg[pool] (>=3.2.10,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
